--- a/_config.yml
+++ b/_config.yml
@@ -13,7 +13,7 @@ timezone: UTC
 
 # URL
 ## If your site is put in a subdirectory, set url as 'http://yoursite.com/child' and root as '/child/'
-url: http://yoursite.com
+url: http://blog.liuyunzhuge.com
 root: /
 permalink: :year/:month/:day/:title/
 permalink_defaults:
