--- a/_config.yml
+++ b/_config.yml
@@ -74,7 +74,7 @@ pagination_dir: page
 # Extensions
 ## Plugins: https://hexo.io/plugins/
 ## Themes: https://hexo.io/themes/
-theme: next2
+theme: next
 
 # Deployment
 ## Docs: https://hexo.io/docs/deployment.html
