--- a/_config.yml
+++ b/_config.yml
@@ -4,10 +4,10 @@
 
 # Site
 title: 流云诸葛
-subtitle: 记录、分享
-description: 工作、生活
+subtitle: 存在的痕迹
+description: 
 keywords: 前端、产品
-author: 流云诸葛
+author: 
 language: zh-CN
 timezone: UTC
 
