--- a/themes/next/_config.yml
+++ b/themes/next/_config.yml
@@ -652,16 +652,16 @@ valine:
 # Gitment
 # Introduction: https://github.com/imsun/gitment
 gitment:
-  enable: false
-  mint: true # RECOMMEND, A mint on Gitment, to support count, language and proxy_gateway
+  enable: true
+  mint: false # RECOMMEND, A mint on Gitment, to support count, language and proxy_gateway
   count: true # Show comments count in post meta area
   lazy: false # Comments lazy loading with a button
   cleanly: true # Hide 'Powered by ...' on footer, and more
   language: # Force language, or auto switch by theme
   github_user: liuyunzhuge # MUST HAVE, Your Github Username
   github_repo: hexo-blog # MUST HAVE, The name of the repo you use to store Gitment comments
-  client_id: 22a4cda34bc7af318ccc # MUST HAVE, Github client id for the Gitment
-  client_secret: 02235eae49e41cc6f4e6bf4b369e14e1f451229f # EITHER this or proxy_gateway, Github access secret token for the Gitment
+  client_id: aea5dac45cf0c7d4f8fd # MUST HAVE, Github client id for the Gitment
+  client_secret: 49dc49b3aaf2a5282382aef99917a0c45eb0c002 # EITHER this or proxy_gateway, Github access secret token for the Gitment
   proxy_gateway: # Address of api proxy, See: https://github.com/aimingoo/intersect
   redirect_protocol: # Protocol of redirect_uri with force_redirect_protocol when mint enabled
 
