--- a/package.json
+++ b/package.json
@@ -18,7 +18,8 @@
     "hexo-renderer-ejs": "^0.3.1",
     "hexo-renderer-marked": "^0.3.2",
     "hexo-renderer-stylus": "^0.3.3",
-    "hexo-server": "^0.3.3"
+    "hexo-server": "^0.3.3",
+    "path-to-regexp": "^6.1.0"
   },
   "devDependencies": {
     "core-js": "^3.2.1"
